<resources>
    <string name="app_name">ComKate</string>

    <string name="login_to_continue">Login to continue</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>

    <string name="text">text</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">sign_up</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create new account</string>
    <string name="add_image">Add image</string>
    <string name="create_new_account">Create new account</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="select_user">Select user</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="name">name</string>

</resources>